fixed alignment issue on desktop

--- a/src/Components/Crew/crew.css
+++ b/src/Components/Crew/crew.css
@@ -231,7 +231,7 @@
         flex-direction: row-reverse;
         justify-content: space-between;
         align-items: center;
-        height: 100%;
+        min-height: 100%;
     }
 
     .crew-image {
@@ -254,6 +254,8 @@
         justify-content: flex-start;
         margin-left: 10.3rem;
         margin-bottom: 0;
+
+        border: solid 1px white;
     }
 
     .crew-info {
